# ProImg

./: .bazelrc  .gitignore  LICENSE.txt  MODULE.bazel  README.md
app/: BUILD.bazel  log-inl.h  proimg.cc
data/: BUILD.bazel
image/: BUILD.bazel  effects-inl.h  effects.h  ppm-inl.h  ppm.h
math/: BUILD.bazel  complex.h  convolution-inl.h  convolution.h  macros.h  matrix-inl.h  matrix.h  random.h  range.h  types.h  vector-inl.h  vector.h
tests/: BUILD.bazel  complex_test.cc  matrix_test.cc  range_test.cc  vector_test.cc
