load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
   name="math_tools",
   hdrs=["complex.h", "complex-inl.h", "convolution.h", "convolution-inl.h", "macros.h", "matrix.h", 
         "matrix-inl.h", "random.h", "range.h", "types.h", "vector.h", "vector-inl.h"],
   visibility=["//visibility:public"]
)